--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav id="desktop-nav">
+            <div class="logo">Jari Peltola </div>
+        <div>
+            <ul class="nav-links">
+                <li></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#expirience">Expirience</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+
+       </div>
+        </nav>
+    </header>
     <main>
         <section></section>
         <section></section>
@@ -16,6 +30,6 @@
     <footer>
         
     </footer>
-    
+    <script src="main.js"></script>
 </body>
 </html>
