--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </nav> 
         <div class="profile-pic">
-            <img src="assets/assets/jari-profile_720.png" alt="project-img" class="my-pic">
+            <img src="assets/assets/profile.webp" alt="project-img" class="my-pic">
         </div>
         
     <section id="profile">  
