--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1 class="title">Jari Peltola</h1>
             <p class="section__text__p2">Frontend developer</p>
             <div class="btn-container"> 
-                <button class="btn btn-color-2" onclick="window.open('assets/assets/resume-example.pdf')"
+                <button class="btn btn-color-2" onclick="window.open('assets/assets/Black Modern Graphic Designer Creative Resume.pdf')"
                 >Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'"
                 >Contact info</button>
@@ -72,7 +72,7 @@
                         <img src="assets/assets/experience.png" alt="Experience" class="icon">
                         <h3>Experience</h3>
                         <p>1 + 1/2 years<br>Junior Development</p>
-                    </div>
+                    </div>  
                     <div class="details-container">
                         <img src="assets/assets/education.png" alt="Education" class="icon">
                         <h3>Education</h3>
@@ -81,7 +81,23 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor molestiae odit enim! Voluptas dolorem, voluptates deleniti ab ipsum repellat expedita earum, molestias nostrum esse voluptatem nesciunt. Quisquam reiciendis impedit officiis totam! Maxime quas qui voluptas earum! Quo odit alias porro debitis at eius ea a exercitationem, molestias consectetur nam perspiciatis non amet recusandae voluptas molestiae beatae dolorum illum nostrum nihil? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid minus cupiditate rerum quis totam recusandae at expedita id ratione, temporibus repellendus eligendi accusamus libero error reprehenderit excepturi. Voluptatum, quod in!</p>
+                    <p>Enthusiastic and dedicated coder with 18 months of experience in HTML, CSS, and JavaScript. Holds certifications in these technologies. Proficient in using Git, Shell, and TailwindCSS for responsive website development and deployment. Currently expanding knowledge in back-end development, focusing on Express.js, testing, SQL, and APIs.
+
+                        Skills:
+                        Programming: HTML, CSS, JavaScript
+                        Tools: Git, Shell, TailwindCSS
+                        Back-end Learning: Express.js, Testing, SQL, APIs
+                        Interests: Diverse physical activities including swimming, cycling, and running
+                        Experience:
+                        HTML/CSS/JS Development (18 months)
+                        Proficient in creating responsive websites using HTML, CSS, and JavaScript
+                        Certified in HTML, CSS, and JavaScript technologies
+                        Back-end Development Learning
+                        Currently expanding skills in Express.js, testing, SQL, and APIs
+                        Personal:
+                        Positive and cheerful personality, dedicated to learning and growth
+                        Enjoys a variety of physical activities, including swimming, cycling, and running.
+                        </p>
                 </div>
             </div>
         </div>
