--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 >Contact info</button>
             </div>
             <div id="socials-container">
-                <img src="assets/assets/linkedin.png" alt="My Linkedin profile" 
+                <img src="assets/assets/linkedin.png" alt="My Linkedin profile"  
                 class="icon" onclick="location.href='https://www.linkedin.com/in/jari-jari-25b416153/'">
                 <img src="assets/assets/github.png" alt="My github profile" 
                 class="icon" onclick="location.href='https://github.com/Moontags?tab=repositories'">
@@ -81,21 +81,21 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Enthusiastic and dedicated coder with 18 months of experience in HTML, CSS, and JavaScript. Holds certifications in these technologies. Proficient in using Git, Shell, and TailwindCSS for responsive website development and deployment. Currently expanding knowledge in back-end development, focusing on Express.js, testing, SQL, and APIs.
+                    <p>Enthusiastic and dedicated coder with 18 months of experience in HTML, CSS, and JavaScript. Holds certifications in these technologies. Proficient in using Git, Shell, and TailwindCSS for responsive website development and deployment. <br> Currently expanding knowledge in back-end development, focusing on Express.js, testing, SQL, and APIs.<br>
 
                         Skills:
                         Programming: HTML, CSS, JavaScript
-                        Tools: Git, Shell, TailwindCSS
+                        Tools: Git, Shell, TailwindCSS.<br>
                         Back-end Learning: Express.js, Testing, SQL, APIs
-                        Interests: Diverse physical activities including swimming, cycling, and running
+                        Interests: Diverse physical activities including swimming, cycling, and running.<br>
                         Experience:
                         HTML/CSS/JS Development (18 months)
-                        Proficient in creating responsive websites using HTML, CSS, and JavaScript
-                        Certified in HTML, CSS, and JavaScript technologies
+                        Proficient in creating responsive websites using HTML, CSS, and JavaScript.
+                        Certified in HTML, CSS, and JavaScript technologies.<br>
                         Back-end Development Learning
-                        Currently expanding skills in Express.js, testing, SQL, and APIs
+                        Currently expanding skills in Express.js, testing, SQL, and APIs.<br>
                         Personal:
-                        Positive and cheerful personality, dedicated to learning and growth
+                        Positive and cheerful personality, dedicated to learning and growth.
                         Enjoys a variety of physical activities, including swimming, cycling, and running.
                         </p>
                 </div>
