--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Moontags?tab=repositories'">
                     Github
                 </button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://moontags.github.io/joker/'">
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https:https://moontags.github.io/feedback/'">
                     Live Demo
                 </button>    
             </div>
