--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div id="socials-container">
                 <img src="assets/assets/linkedin.png" alt="My Linkedin profile"  
-                class="icon" onclick="location.href='https://www.linkedin.com/in/jari-jari-25b416153/'">
+                class="icon" onclick="location.href='https://www.linkedin.com/feed/'">
                 <img src="assets/assets/github.png" alt="My github profile" 
                 class="icon" onclick="location.href='https://github.com/Moontags?tab=repositories'">
             </div>
@@ -252,7 +252,7 @@
             </div>
             <div class="contact-info-container">
                 <img src="assets/assets/linkedin.png" alt="linkedIn icon" class="icon contact-icon">
-                <p><a href="https://www.linkedin.com/in/jari-jari-25b416153/">linkedIn</a></p>
+                <p><a href="https://www.linkedin.com/feed/">linkedIn</a></p>
             </div>
         </div>
     </section>
