--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
             </div>
             <h2 class="experience-sub-title project-title">Project One</h2>
             <div class="btn-container">
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Moontags/joker'">
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Moontags/kolmas'">
                     Github
                 </button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://moontags.github.io/joker/'">
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://moontags.github.io/kolmas/index.html'">
                     Live Demo
                 </button>    
             </div>
