--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </nav> 
         <div class="profile-pic">
-            <img src="assets/assets/profile.webp" alt="project-img" class="my-pic">
+            <img src="assets/assets/fc73a14f-4817-4705-bac9-d83d7d26e071 2.jpg" width="100%" alt="project-img">
         </div>
         
     <section id="profile">  
