--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
             </div>
             <h2 class="experience-sub-title project-title">Project Two</h2>
             <div class="btn-container">
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Moontags/homepage'">
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://https://github.com/Moontags/siivousote'">
                     Github
                 </button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://moontags.github.io/homepage/index.html'">
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://moontags.github.io/siivousote/'">
                     Live Demo
                 </button>    
             </div>
