--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="assets/assets/email.png" alt="email icon" class="icon contact-icon email-icon">
-                <p><a href="mail:examplemail@mail.com">codeventuresolutions@gmail.com</a></p>
+                <p><a href="mailto:posti@mediasata.fi">posti@mediasata.fi</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="assets/assets/linkedin.png" alt="linkedIn icon" class="icon contact-icon">
